# devops-python-project

./: .gitlab-ci.yml  pyproject.toml  requirements.txt
app/: Dockerfile  main.py
monitoring/: docker-compose.yml  prometheus.yml
terraform/: main.tf  outputs.tf  variables.tf
